@@ -1,5 +1,10 @@
 2007-12-06  Jens Granseuer  <jensgr@gmx.net>
 
+	* gnome-about-me-password.c: (passdlg_spawn_passwd): add a translation
+	hint
+
+2007-12-06  Jens Granseuer  <jensgr@gmx.net>
+
 	* gnome-about-me.glade: don't mark empty and padding strings for
 	translation (bug #502087)
 
